services/canary-example/deployment-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-example-production
  labels:
    app: canary-example-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-example-production
  template:
    metadata:
      labels:
        app: canary-example-production
    spec:
      containers:
      - name: canary-example-production
        image: registry.k8s.io/ingress-nginx/e2e-test-echo@sha256:6fc5aa2994c86575975bb20a5203651207029a0d28e3f491d8a127d08baadab4
        ports:
        - containerPort: 80
