services/canary-example/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-example-canary
  labels:
    app: canary-example-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-example-canary
  template:
    metadata:
      labels:
        app: canary-example-canary
    spec:
      containers:
      - name: canary-example-canary
        image: registry.k8s.io/ingress-nginx/e2e-test-echo@sha256:6fc5aa2994c86575975bb20a5203651207029a0d28e3f491d8a127d08baadab4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: canary-example-canary
  labels:
    app: canary-example-canary
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: canary-example-canary
