services/canary-example/service-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-example-production
  labels:
    app: canary-example-production
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: canary-example-production
