services/canary-example/canary-example-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: square-root-v3
spec:
  selector:
    matchLabels:
      app: square-root-v3
  replicas: 1
  template:
    metadata:
      labels:
        app: square-root-v3
    spec:
      containers:
      - name: square-root-v3
        image: cloudqubes/square-root:3.0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: square-root-v3
spec:
  selector:
    app: square-root-v3
  ports:
  - name: square-root-v3-port
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: square-root-v3
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
  - host: naavre-dev.minikube.test
    http:
      paths:
      - path: /square-root
        pathType: Prefix
        backend:
          service:
            name: square-root-v3
            port:
              number: 8080
