services/canary-example/canary-example-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: square-root-v2
spec:
  selector:
    matchLabels:
      app: square-root-v2
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: square-root-v2
    spec:
      containers:
      - name: square-root-v2
        image: cloudqubes/square-root:2.0.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: square-root-v2
spec:
  selector:
    app: square-root-v2
  ports:
  - name: square-root-v2-port
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: square-root-v2
spec:
  ingressClassName: nginx
  rules:
  - host: naavre-dev.minikube.test
    http:
      paths:
      - path: /square-root
        pathType: Prefix
        backend:
          service:
            name: square-root-v2
            port:
              number: 8080
